# AIOLI

./: .gitignore  i2s_dma_record_playback.c
armgcc/: CMakeLists.txt  build_release.sh  flash_image.sh
board/: pin_mux.c
src/: i2s_dma_record_playback.c
